@@ -2,10 +2,7 @@ package cucumber.runtime.io;
 
 import cucumber.runtime.CucumberException;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 
 class Helpers {
     private Helpers() {
@@ -15,37 +12,13 @@ class Helpers {
         return suffix == null || name.endsWith(suffix);
     }
 
-    static String filePath(URL fileUrl) {
-        if (!"file".equals(fileUrl.getProtocol())) {
-            throw new CucumberException("Expected a file URL:" + fileUrl.toExternalForm());
-        }
-        try {
-            return fileUrl.toURI().getSchemeSpecificPart();
-        } catch (URISyntaxException e) {
-            throw new CucumberException(e);
-        }
-    }
-
-    static String filePath(URI fileUri) {
-        if (!"file".equals(fileUri.getScheme())) {
-            throw new CucumberException("Expected a file URI:" + fileUri.toString());
-        }
-
-        return fileUri.getSchemeSpecificPart();
-    }
-
-    static String jarFilePath(URL jarUrl) {
-        String urlFile = jarUrl.getFile();
+    static URI jarFilePath(URI jarUrl) {
+        String urlFile = jarUrl.getRawSchemeSpecificPart();
 
         int separatorIndex = urlFile.indexOf("!/");
         if (separatorIndex == -1) {
-            throw new CucumberException("Expected a jar URL: " + jarUrl.toExternalForm());
+            throw new CucumberException("Expected a jar URL: " + jarUrl);
         }
-        try {
-            URL fileUrl = new URL(urlFile.substring(0, separatorIndex));
-            return filePath(fileUrl);
-        } catch (MalformedURLException e) {
-            throw new CucumberException(e);
-        }
+        return URI.create(urlFile.substring(0, separatorIndex));
     }
 }
